# option_trading

./: .gitignore  .obsidianignore  AGENT.md  AGENTS.md  GEMINI.md  Gemini 系统升级研究提示词.md  L4_UI_TEST_MIGRATION_GOVERNANCE_CHECKLIST.md  README.md  TASKS.md  TECH_DEBT_TASKLIST.md  example.py  main.py  quant_research_prompts.md  requirements.txt  research_report.md  test_data_flow.py  test_results.md  启动步骤.md  清单.md
.obsidian/: app.json  graph.json
ADBMsysteam_deploy/: AGENTS.md  DEPLOYMENT.md  README_启动方式.md  environment.env  implementation_plan.md
app/: container.py  lifespan.py
backend/: .env.template  requirements.txt  start_backend.py  start_uvicorn.py  uvicorn_log.txt
docs/: IV_METRICS_MAP.md  L0_DATA_FEED.md  L1_LOCAL_COMPUTATION.md  L2_DECISION_ANALYSIS.md  L3_OUTPUT_ASSEMBLY.md  L4_FRONTEND.md  LONGPORT_LLMS_EFFECTIVE_FIELDS.md  LONGPORT_OPTION_FIELD_DICTIONARY.md  OPTION_PAPER_FORMULA_AUDIT_2024_2026.md  OPTION_PAPER_FORMULA_SOURCEBOOK_2024_2026.md  SYSTEM_OVERVIEW.md
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
l0_ingest/: README.md  __init__.py  l0_rust.py  subscription_manager.py
l0_ingest/l0_rust/: Cargo.toml  pyproject.toml
l0_ingest/l0_rust/src/: ipc.rs  lib.rs  schema.rs  threat.rs
l0_refactor/: __init__.py
l0_rust/: __init__.py
l0_rust-0.1.0.dist-info/: METADATA  RECORD
l1_compute/: README.md  __init__.py  reactor.py  rust_bridge.py
l1_refactor/: __init__.py  reactor.py
l2_decision/: README.md  __init__.py  reactor.py
l2_refactor/: README.md  __init__.py  reactor.py
l4_ui/: README.md  (+7 more)
(+1501 files in other folders)
